k3s/cluster/infra/observability/auth/prometheus/ingress-admin.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-admin
  namespace: observability
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: traefik-system-admin-auth@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: prometheus.admin.dege.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: observability-core-kube-pr-prometheus
                port:
                  number: 9090
